# dsa4213-ppt-generator

./: .gitignore  LICENSE  README.md  app.py  app.toml  collection_list.json  main.py  makefile  pdf_reader.py  pyproject.toml  read_pdf.py  requirements.txt  test.json
data/: attention.txt  image_title_description_mapping.json
frontend_explore/: collection_list.json
frontend_explore/ppt_generator/: markdown_generator.py  md2ppt.py  utils.py
frontend_explore/src/: app.py  constants.py  doc_qna_h2ogpte.py  dsa4213-ppt-generator.code-workspace  layout.py  ppt_generator.py  texts_app.py
my_mds/: attention.md  index.txt
my_ppts/: Presentation_mode_1.pptx  Presentation_mode_2.pptx  attention_mode1.pptx  attention_mode2.pptx  test.json
ppt_generator/: Prompt.py  config.py  main.py  markdown_generator.py  markdown_updater.py  md2ppt.py  pdf_reader.py  test.json  utils.py  windows_ppt2pdf.py
ppt_generator/content_generator/: markdown_generator.py  pdf_reader.py
ppt_generator/md2ppt/: markdown_parser.py  ppt_generator.py
ppt_generator/my_mds/: attention.md  index.txt
ppt_generator/my_ppts/: attention_mode1.pptx  attention_mode2.pptx  ~$attention_mode2.pptx
ppt_mode/1/: mode.json
ppt_mode/2/: mode.json
src/: app.py  constants.py  doc_qna_h2ogpte.py  layout.py  prompts.py  texts_app.py  utils.py
