[tool.poetry]
name = "ppt-generator"
version = "0.1.0"
description = ""
authors = ["Yuwen <wangyuwen@u.nus.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
h2ogpte = "^1.4.10"
python-pptx = "^0.6.23"
markdown = "^3.6"
h2o-wave = "^1.1.1"
tqdm = "^4.66.2"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
isort = "^5.13.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
